--- a/demo.html
+++ b/demo.html
@@ -4,7 +4,8 @@
 		<meta charset="utf-8">
 		<title>Demo Leaflet.Map-hash</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.0.2/leaflet.css">
+		<!--link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.7/leaflet.css"-->
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.0.3/leaflet.css">
 		<style>
 body {
 	margin: 0;
@@ -34,7 +35,8 @@ body {
 </style>
 	</head>
 	<body class="crosshairs"><!-- map container -->
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.0.2/leaflet.js"></script>
+		<!--script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.7/leaflet.js"></script-->
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.0.3/leaflet.js"></script>
 		<script src="leaflet.map-hash.js"></script>
 		<script>
 var map = L.map(document.body, {
