--- a/demo.html
+++ b/demo.html
@@ -4,16 +4,17 @@
 		<meta charset="utf-8">
 		<title>Demo Leaflet.Map-hash</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-		<!--link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.7/leaflet.css"-->
-		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.1.0/leaflet.css">
+		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.7.0/leaflet.css">
 		<style>
-body {
+html,
+body,
+#mapContainer {
+	height: 100%;
 	margin: 0;
 	padding: 0;
-	position: absolute; top: 0; bottom: 0; width: 100%;
 }
 
-/* http://codepen.io/timwis/pen/obmMpM */
+/* https://codepen.io/timwis/pen/obmMpM */
 .crosshairs:before, .crosshairs:after {
   content: '';
   position: absolute;
@@ -33,17 +34,17 @@ body {
   border-right: 1px #000 solid;
 }
 </style>
-	</head>
-	<body class="crosshairs"><!-- map container -->
-		<!--script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.7/leaflet.js"></script-->
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.1.0/leaflet.js"></script>
+		<script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.7.0/leaflet.js"></script>
 		<script src="leaflet.map-hash.js"></script>
+	</head>
+	<body>
+		<div id="mapContainer" class="crosshairs"></div>
 		<script>
-var map = L.map(document.body, {
+L.map('mapContainer', {
 	center: [50, 5], // Ardennes, BE
 	zoom: 5,
 	urlHash: true, // <- !
-	layers: L.tileLayer('http://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
+	layers: L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
 		maxZoom: 19,
 		attribution: '<a href="https://openstreetmap.org">OpenStreetMap</a> contributors'
 	})
